Crash on 'CTRL' or 'Command'+LMB in edit mode #72309

Closed
opened 2019-12-09 18:03:43 +01:00 by William Hamblen · 11 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.24 355.11.10.50.10.103

Blender Version
Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-08 18:49, hash: 761111efb8

Worked:
Does not crash in Current stable version 2.81a

Short description of error
'CTRL' or 'Command' + mouse click (in 3D Viewport) in edit mode crashes Blender. Only broken using left-click select mode. Does not crash while using right-click select mode.

Exact steps for others to reproduce the error

  • Enable left-click select in the preferences
  • Select an object and switch into edit mode

CTRL + LMB somewhere in the 3D View.

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: NVIDIA GeForce GT 750M OpenGL Engine NVIDIA Corporation 4.1 NVIDIA-12.0.24 355.11.10.50.10.103 **Blender Version** Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-08 18:49, hash: `761111efb8` Worked: Does not crash in Current stable version 2.81a **Short description of error** 'CTRL' or 'Command' + mouse click (in 3D Viewport) in edit mode crashes Blender. Only broken using *left-click* select mode. Does not crash while using *right-click* select mode. **Exact steps for others to reproduce the error** - Enable left-click select in the preferences - Select an object and switch into edit mode # CTRL + LMB somewhere in the 3D View.

Added subscriber: @wphiiii-1

Added subscriber: @wphiiii-1

#72397 was marked as duplicate of this issue

#72397 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce this with 761111efb8 as well as the most recent master.

I can reproduce this with 761111efb8 as well as the most recent master.
Robert Guetzkow changed title from Crash on 'Control' OR 'Command' + click in edit mode to Crash on 'CTRL' or 'Command'+LMB in edit mode 2019-12-09 19:42:26 +01:00

Stacktrace from build based on 62ef59aa0c, the GPUFrameBuffer passed into GPU_framebuffer_bind is NULL.

GPU_framebuffer_bind(GPUFrameBuffer * fb) Line 510	C
OVERLAY_edit_mesh_draw(OVERLAY_Data * vedata) Line 365	C
OVERLAY_draw_scene(void * vedata) Line 417	C
drw_engines_draw_scene() Line 1218	C
DRW_draw_select_loop(Depsgraph * depsgraph, ARegion * ar, View3D * v3d, bool UNUSED_use_obedit_skip, bool draw_surface, bool UNUSED_use_nearest, const rcti * rect, bool(*)(eDRWSelectStage, void *) select_pass_fn, void * select_pass_user_data, bool(*)(Object *, void *) object_filter_fn, void * object_filter_user_data) Line 2320	C
view3d_opengl_select(ViewContext * vc, unsigned int * buffer, unsigned int bufsize, const rcti * input, <unnamed-enum-VIEW3D_SELECT_ALL> select_mode, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter) Line 1160	C
mixed_bones_object_selectbuffer(ViewContext * vc, unsigned int * buffer, const int * mval, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter, bool do_nearest) Line 1684	C
mixed_bones_object_selectbuffer_extended(ViewContext * vc, unsigned int * buffer, const int * mval, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter, bool use_cycle, bool enumerate, bool * r_do_nearest) Line 1783	C
ed_object_select_pick(bContext * C, const int * mval, bool extend, bool deselect, bool toggle, bool obcenter, bool enumerate, bool object) Line 2061	C
view3d_select_exec(bContext * C, wmOperator * op) Line 2421	C
view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 2461	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1441	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2281	C
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2594	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2731	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3078	C
wm_event_do_handlers(bContext * C) Line 3446	C
WM_main(bContext * C) Line 420	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 498	C
Stacktrace from build based on 62ef59aa0c, the `GPUFrameBuffer` passed into `GPU_framebuffer_bind` is NULL. ``` GPU_framebuffer_bind(GPUFrameBuffer * fb) Line 510 C OVERLAY_edit_mesh_draw(OVERLAY_Data * vedata) Line 365 C OVERLAY_draw_scene(void * vedata) Line 417 C drw_engines_draw_scene() Line 1218 C DRW_draw_select_loop(Depsgraph * depsgraph, ARegion * ar, View3D * v3d, bool UNUSED_use_obedit_skip, bool draw_surface, bool UNUSED_use_nearest, const rcti * rect, bool(*)(eDRWSelectStage, void *) select_pass_fn, void * select_pass_user_data, bool(*)(Object *, void *) object_filter_fn, void * object_filter_user_data) Line 2320 C view3d_opengl_select(ViewContext * vc, unsigned int * buffer, unsigned int bufsize, const rcti * input, <unnamed-enum-VIEW3D_SELECT_ALL> select_mode, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter) Line 1160 C mixed_bones_object_selectbuffer(ViewContext * vc, unsigned int * buffer, const int * mval, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter, bool do_nearest) Line 1684 C mixed_bones_object_selectbuffer_extended(ViewContext * vc, unsigned int * buffer, const int * mval, <unnamed-enum-VIEW3D_SELECT_FILTER_NOP> select_filter, bool use_cycle, bool enumerate, bool * r_do_nearest) Line 1783 C ed_object_select_pick(bContext * C, const int * mval, bool extend, bool deselect, bool toggle, bool obcenter, bool enumerate, bool object) Line 2061 C view3d_select_exec(bContext * C, wmOperator * op) Line 2421 C view3d_select_invoke(bContext * C, wmOperator * op, const wmEvent * event) Line 2461 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1441 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2281 C wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2594 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2731 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3078 C wm_event_do_handlers(bContext * C) Line 3446 C WM_main(bContext * C) Line 420 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 498 C ```

The bug was introduced in commit 1b33e1f9ae

The bug was introduced in commit 1b33e1f9ae
Clément Foucault was assigned by Robert Guetzkow 2019-12-09 20:13:39 +01:00

Not my area of expertise, but could it be that a if (DRW_state_is_fbo()) { } check is missing in OVERLAY_edit_mesh_draw() that was introduced for other draw functions in d21a8dcae2 ? Adding the check avoids the crash.

Not my area of expertise, but could it be that a `if (DRW_state_is_fbo()) { }` check is missing in `OVERLAY_edit_mesh_draw()` that was introduced for other draw functions in d21a8dcae2 ? Adding the check avoids the crash.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @user1

Added subscriber: @user1
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

I can confirm that this has been fixed in the latest version of master.

  • 2.82 (sub 5), branch: master, commit date: 2019-12-11 18:53, hash: b03066f7ee
I can confirm that this has been fixed in the latest version of master. * 2.82 (sub 5), branch: master, commit date: 2019-12-11 18:53, hash: `b03066f7ee`
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72309
No description provided.